--- a/ml_notes/cs229/cs229hw_local.html
+++ b/ml_notes/cs229/cs229hw_local.html
@@ -460,6 +460,14 @@ if __name__ == &#39;__main__&#39;: main()</code></pre>
 <p class="caption">The first row of quasar spectra data plotted against wavelengths along with the curve resulting from a locally weighted linear regression with <span class="math inline">\(\tau = 5.\)</span></p>
 <img src="images/pr1_5bii.png" alt="The first row of quasar spectra data plotted against wavelengths along with the curve resulting from a locally weighted linear regression with \tau = 5." />
 </div>
+<p>iii</p>
+<p>In this problem, we repeat part ii, except with the <span class="math inline">\(\tau\)</span> values 1, 10, 100, and 1000.</p>
+<p>The code is similar to the above. Here is the graph generated:</p>
+<div class="figure">
+<p class="caption">The first row of quasar spectra data plotted against wavelengths along with the curves resulting from locally weighted linear regressions with <span class="math inline">\(\tau = 1, 10, 100,\)</span> and 1000.</p>
+<img src="images/pr1_5biii.png" alt="The first row of quasar spectra data plotted against wavelengths along with the curves resulting from locally weighted linear regressions with \tau = 1, 10, 100, and 1000." />
+</div>
+<p>As <span class="math inline">\(\tau\)</span> increases, the resulting LWLR curve becomes smoother. Smaller <span class="math inline">\(\tau\)</span> values allow for more variation at a local level, thus fitting the data more closely, but also enabling wild variations due to noise.</p>
     </div>
   </body>
 </html>
