--- a/self_repl_fns/template.html
+++ b/self_repl_fns/template.html
@@ -7,7 +7,7 @@
 	<script type="text/x-mathjax-config"> 
       MathJax.Hub.Register.StartupHook("TeX AMSmath Ready",function () { 
         MathJax.InputJax.TeX.Definitions.environment["densearray"] = 
-          ['AMSarray',null,true,true,'rcl',".4em"]; 
+          ['AMSarray',null,true,true,'rcl','0em .4em']; 
       }); 
 	</script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
