--- a/self_repl_fns/self_repl_fns_local.html
+++ b/self_repl_fns/self_repl_fns_local.html
@@ -209,13 +209,16 @@
       <p>Readers familiar with the <a href="https://en.wikipedia.org/wiki/Cantor_set"><em>Cantor set</em></a> <span class="math inline">\({\mathcal{C}}\)</span> may notice that it’s closely related to the set <span class="math inline">\(G\)</span>. In fact, <span class="math inline">\({\mathcal{C}}\)</span> is exactly the closure of <span class="math inline">\((1,2)-G\)</span> shifted by a unit to reside within <span class="math inline">\([0,1].\)</span></p>
       <p>What values may <span class="math inline">\(f\)</span> take on for the points <span class="math inline">\(x\in (1,2) - G\)</span>? The choice is still not arbitrary as the values remain related. I’ll explore this question next.</p>
       <p>Given <span class="math inline">\(x\in (1,2)\)</span>, there is some <span class="math inline">\(k\)</span> with <span class="math inline">\(x\in G_k\)</span> iff the base-3 expansion of <span class="math inline">\(x\)</span> contains a 1 or if it ends with the tail <span class="math inline">\(\overline{0}\)</span>. This can be expressed as:</p>
-      <p><span id="eq:onetwo_lessG"><span class="math display">\[\text{For } x\in (1,2), \quad
-        x\not\in G \;\;\Leftrightarrow\;\; x \in 1.{\big\{\!\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
+      <p><span id="eq:onetwo_lessG"><span class="math display">\[\begin{array}{l}
+      \text{For } x\in (1,2),\quad
+        x\not\in G \;\;\Leftrightarrow\;\; \\
+        x \in 1.{\big\{\!\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
       {\lower1.8pt\hbox{$\smash{\scriptstyle 0}$}}
       {\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\!\big\}}^\infty_3 -\,
         \bigcup_{k\ge 0} 1.{\big\{\!\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
       {\lower1.8pt\hbox{$\smash{\scriptstyle 0}$}}
-      {\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\!\big\}}^k\overline{0}_3.\qquad(6)\]</span></span></p>
+      {\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\!\big\}}^k\overline{0}_3.
+      \end{array}\qquad(6)\]</span></span></p>
       <p>From here on, I’ll more formally use the word <em>expansion</em> — based on the idea of the base-3 expansion of a number in <span class="math inline">\([0,1]\)</span> — to indicate a function <span class="math inline">\(E:\mathbb{N}_{\ge 1}\to \{0, 1, 2\}\)</span> which denotes the value <span class="math inline">\(v(E) = \sum_{k\ge 1}E(k)/3^k.\)</span> If <span class="math inline">\(x=v(E)\)</span>, we may write <span class="math inline">\(x = 0.E_3\)</span> and think of <span class="math inline">\(E\)</span> as an infinite string on the alphabet <span class="math inline">\(\{0,1,2\}\)</span>.</p>
       <p>Suppose that <span class="math inline">\(f(x) = y\)</span> for some <span class="math inline">\(x\in (1,2)\)</span>. Let <span class="math inline">\(E\)</span> be the expansion with <span class="math inline">\(x=1.E_3\)</span>; note that <span class="math inline">\(E\)</span> cannot be the all-zero string <span class="math inline">\(\overline 0\)</span> nor the all-two string <span class="math inline">\(\overline 2\)</span> since <span class="math inline">\(x\in (1,2)\)</span>. Then <span class="math inline">\(f_S(x+\{0,2\}) = y\)</span> and, by applying <span class="math inline">\(t_1\)</span>, <span class="math inline">\(f(x&#39;) = y\)</span> for both <span class="math inline">\(x&#39; = (x+2)/3\)</span> and <span class="math inline">\(x&#39; = (x+4)/3\)</span>. In expansion notation, we can write these last two equations as <span class="math inline">\(x&#39; = x/3 + 2/3 = 0.1E_3 + 0.2_3 = 1.0E_3\)</span> and as <span class="math inline">\(x&#39; = x/3 + 4/3 = 0.1E_3 + 1.1_3 = 1.2E_3\)</span>. We can summarize this reasoning as</p>
       <p><span id="eq:h_reln"><span class="math display">\[E\ne \overline 0, \overline 2 \quad\Rightarrow\quad
