Add \{big,small}scr commands (somewhat sadly).

--- a/self_repl_fns/self_repl_fns_local.html
+++ b/self_repl_fns/self_repl_fns_local.html
@@ -225,11 +225,12 @@
       {\lower1.8pt\hbox{$\smash{\scriptstyle 0}$}}
       {\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\!\big\}}E_3) = f(1.E_3).{\class{smallscrneg}{ }}\qquad(7)\]</span></span></p>
       <p>We can expand on this idea to partition <span class="math inline">\((1,2) - G\)</span> into subsets on which <span class="math inline">\(f\)</span> must have the same value. To do that, it will be useful to define the <em>tail</em> of an expansion as a way to capture end-of-string behavior. More precisely, if <span class="math inline">\(E\)</span> is an expansion, then define <span class="math inline">\({\text{tail}}(E)\)</span> via</p>
-      <p><span class="math display">\[\begin{array}{l}
-      {\text{tail}}(E) = \big\{\text{expansion }\eta \;\big|\;
+      <p><span class="math display">\[{\class{bigscr}{{\text{tail}}(E) = \big\{\text{expansion }\eta \;\big|\;
+      \exists\, j, k: 
+      E(j + m) = \eta(k + m) \,\forall\, m \ge 0\big\}.}}
+      {\class{smallscr}{\begin{array}{l}{\text{tail}}(E) = \big\{\text{expansion }\eta \;\big|\;
       \exists\, j, k: \\
-      \quad E(j + m) = \eta(k + m) \,\forall\, m \ge 0\big\}.
-      \end{array}\]</span></p>
+      \quad E(j + m) = \eta(k + m) \,\forall\, m \ge 0\big\}.\end{array}}}\]</span></p>
       <p>Intuitively, <span class="math inline">\({\text{tail}}(E)\)</span> is the set of all numbers in <span class="math inline">\([0, 1]\)</span> with the same final sequence of base-3 digits as <span class="math inline">\(E\)</span>, ignoring any finite prefix of either expansion. For example, <span class="math inline">\(x=0.21021\overline{011}_3\)</span> and <span class="math inline">\(y=0.001\overline{011}_3\)</span> have <span class="math inline">\(\text{tail}(x) = \text{tail}(y)\)</span>.</p>
       <p>The following theorem builds on equation (7).</p>
       <p><strong>Theorem 2</strong> <span class="math inline">\(\;\)</span> <em>Suppose that <span class="math inline">\(f\)</span> is exactly self-replicating with functions <span class="math inline">\(s,\)</span> <span class="math inline">\(t_1,\)</span> and <span class="math inline">\(t_2\)</span> as given in (2). Also suppose that <span class="math inline">\(G\)</span> is defined as in (5). Then, for</em> <span class="math inline">\(x,y\in (1,2)-G,\)</span></p>
